Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128673

[DocumentViewer] The app crashes on Linux when asserting an instance of RuntimeLoader QML Type

XMLWordPrintable

    • Linux/Wayland
    • 94548822f (dev), ee0cf51f2 (6.8), 1bdebc27a (6.8.0), c15ee7a8a (6.7)

      Linux Ubuntu 22.04.4 / Wayland

      Qt Creator 15.0.0b1

      Steps to reproduce:

      1. Launch document viewer example.
      2. Try to open any file. 

      Expected: The file is opened.

      Actual: The app crashes. 

      Reproducibility:  100% 

        For Gerrit Dashboard: QTBUG-128673
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes